# ImageGenerator

./: .gitignore  CMakeLists.txt  README.md  WorldGeneration.sln
WorldGeneration/: Localization.cpp  Localization.h  Map.cpp  Map.h  MapScreen.h  TabAlgo.h  TabPerlinNoise.cpp  TabPerlinNoise.h  ViewRoot.cpp  ViewRoot.h  ViewRoot.ui  ViewUtils.h  WorldGeneration.vcxproj  WorldGeneration.vcxproj.filters  main.cpp
WorldGeneration/1-foundation/: MathUtils.h
WorldGeneration/2-services/: SetTimeout.cpp  SetTimeout.h  ThreadController.cpp  ThreadController.h
WorldGeneration/3-infrastructure/: Localization.cpp
WorldGeneration/4-domain/: Map.cpp  Map.h
WorldGeneration/4-domain/algos/: Algo.h  AlgoPerlinNoise.cpp  DistanceFromCenter.cpp  DistanceFromCenter.h
WorldGeneration/4-domain/perlin/: PerlinNoise.cpp  PerlinNoise.h
WorldGeneration/5-controller/: Controller.h  MapView.cpp  MapView.h
WorldGeneration/5-controller/commands/: Command.h  DoAlgo.cpp  DoAlgo.h  SaveImage.cpp  SaveImage.h
WorldGeneration/6-view/: GraphicView.cpp  MapScreen.cpp  ViewRoot.cpp  ViewRoot.h  ViewUtils.h
WorldGeneration/6-view/menu/: MenuBar.cpp  MenuBar.h
WorldGeneration/6-view/tab/: GeneratePerlinNoise.cpp  TabAlgo.h  TabPerlinNoise.cpp  TabPerlinNoise.h
WorldGeneration/6-view/tab/input/: InputDouble.h  InputInteger.h
WorldGeneration/controller/: Controller.cpp  Controller.h
WorldGeneration/controller/commands/: Command.h  DoAlgo.h
WorldGeneration/model/: PerlinNoise.h  ThreadController.cpp  ThreadController.h
WorldGeneration/model/algos/: Algo.h  AlgoPerlinNoise.cpp  AlgoPerlinNoise.h  DistanceFromCenter.cpp  DistanceFromCenter.h
WorldGeneration/model/perlin/: PerlinNoise.cpp  PerlinNoise.h
WorldGeneration/view/: ColorInterpolate.h  GraphicView.cpp  GraphicView.h  MapScreen.cpp  MapScreen.h  MapView.cpp  MapView.h  ViewRoot.cpp  ViewRoot.h  ViewUtils.h
WorldGeneration/view/tab/: GeneratePerlinNoise.cpp  GeneratePerlinNoise.h  TabPerlinNoise.cpp  TabPerlinNoise.h
WorldGeneration/view/tab/input/: InputDouble.cpp  InputDouble.h  InputInteger.cpp  InputInteger.h
data/localization/: en.po  fr.po
readme/: fr-README.md
src/: ViewRoot.qrc  ViewRoot.ui  main.cpp  readme.md
src/2-infrastructure/: RandomEngine.cpp  RandomEngine.h  SetTimeout.cpp  ThreadController.cpp  ThreadController.h
src/2-services/: SetTimeout.h  ThreadController.cpp  ThreadController.h
src/3-infrastructure/: KeyBinding.cpp  Localization.cpp  Localization.h
src/3-services/: KeyBinding.h  Localization.cpp  Localization.h
src/4-domain/: ColorInterpolate.h  Coord.cpp  Coord.h  Map.cpp  Map.h  Mapf.cpp  Mapf.h  Mapi.cpp  Mapi.h  Output.h
src/4-domain/algos/: Algo.h  AlgoPerlinNoise.cpp  AlgoPerlinNoise.h  DiamondSquare.cpp  DiamondSquare.h  DistanceFromCenter.cpp  DistanceFromCenter.h  RandomVoronoi.cpp  RandomVoronoi.h
src/4-domain/algos/perlin/: AlgoPerlinNoise.cpp  AlgoPerlinNoise.h  PerlinNoise.h
src/4-domain/algos/platec/: GenerationController.cpp  GenerationController.h  Lithosphere.cpp  Lithosphere.h  Plate.cpp  Plate.h  Platec.cpp  Platec.h  PlatecMap.cpp  PlatecMap.h
src/4-domain/perlin/: PerlinNoise.cpp  PerlinNoise.h
src/5-controller/: Controller.cpp  MapView.cpp  MapView.h
src/5-controller/commands/: Command.h  DoAlgo.cpp  DoAlgo.h  SaveImage.h
src/6-view/: ColorInterpolate.h  GraphicView.h  MapScreen.h  ViewRoot.cpp  ViewRoot.h  ViewUtils.h
src/6-view/menu/: MenuBar.cpp  MenuBar.h
src/6-view/tab/: Generate.h  GeneratePerlinNoise.cpp  GeneratePerlinNoise.h  GenerateRandomVoronoi.cpp  GenerateRandomVoronoi.h  Tab.cpp  Tab.h  TabDiamondSquare.cpp  TabDiamondSquare.h  TabPerlinNoise.cpp  TabPerlinNoise.h  TabPlatec.cpp  TabPlatec.h  TabRandomVoronoi.cpp  TabRandomVoronoi.h
src/6-view/tab/input/: InputDouble.cpp  InputDouble.h  InputInteger.cpp  InputInteger.h  InputSeed.cpp  InputSeed.h
